--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "slackin \"codeforsaopaulo\" \"xoxp-54073070323-63005006848-64821170368-7d1d2269b1\""
+    "start": "slackin \"codeforsaopaulo\" $SLACK_API_TOKEN"
   },
   "repository": {
     "type": "git",
